# VIBESRAILS

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_VIBESRAILS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PRE_RELEASE_AUDIT.md  PROJECT_MEMORY.md  README.md  README_MCP.md  ROADMAP.md  SECURITY.md  SECURITY_COMPARISON.md  VISION.md  claude code.command  install_test.sh  launch-claude-vibesrails.command  mcp_server.py  mcp_tools.py  mcp_tools_ext.py  pyproject.toml  test_e2e_semgrep.py  vibesrails.yaml
.claude/: .last_commit_hash  hooks.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  pr-review.yml
.serena/: project.yml
.vibesrails/: learned_patterns.yaml
.vibesrails/metrics/: architecture_drift.jsonl  scans.jsonl
adapters/: semgrep_adapter.py
archive/vibesrails-archive-v1.2.0/: ARCHIVE_MANIFEST.md
config/: default.yaml
core/: brief_enforcer.py  brief_enforcer_patterns.py  config_shield.py  drift_metrics.py  drift_tracker.py  guardian.py  hallucination_deep.py  hallucination_registry.py  input_validator.py  learning_bridge.py  learning_engine.py  learning_profile.py  logger.py  path_validator.py  prompt_shield.py  prompt_shield_patterns.py  rate_limiter.py  secret_patterns.py  session_tracker.py
docs/: KIONOS-STRATEGY.md  METRICS.md  PROJECT_TREE.md  RATE_LIMITING.md  SEMGREP_INTEGRATION.md  SENIOR_MODE.md  VIBESRAILS_GUIDE.md  VIBESRAILS_MCP_MIGRATION_SPEC.md  decisions.md  vibesrails_guide.html
docs/plans/: 2026-01-26-test-coverage-80.md  2026-01-26-vibesrails-1.3-smart-learning.md  2026-01-28-senior-mode.md  2026-01-29-v2-hooks-implementation.md  2026-01-29-v2-roadmap.md  2026-01-31-orchestration.md  2026-02-07-mcp-migration.md  2026-03-06-project-memory-design.md  2026-04-05-v2.5.0-features.md
docs/releases/: RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.3.0.md
install_guide/: 01_pip_install.md  02_from_source.md  03_claude_code_integration.md  CLAUDE_INSTRUCTIONS.md  NOTES.md  PROJECT_CLAUDE.md
installers/: README.md
installers-v2/: README.md
installers-v2/complete-package/: INSTALL.bat  INSTALL.sh
installers/claude-code/: CLAUDE.md  README.md  install.bat  install.sh
installers/complete-package/: INSTALL.bat  INSTALL.sh  README.md  vibesrails-1.3.0-py3-none-any.whl
installers/cross-platform/: README.md
installers/drag-and-drop/: ptuh.py  vibesrails-2.0.0-py3-none-any.whl
installers/mac-linux/: install.sh  ptuh.py
installers/offline/: CLAUDE.md  INSTALL.bat  INSTALL.sh  ptuh.py
installers/pip/: README.md  install.bat  install.py
installers/python/: install.py  ptuh.py
installers/source/: README.md
installers/templates/: README.md
installers/unix/: README.md
installers/windows/: CLAUDE.md  README.md  install.bat
skills/: install.md
storage/: migrations.py
tests/: __init__.py  conftest.py  test_assertions.py  test_bandit_adapter.py  test_cli.py  test_cli_lifecycle.py  test_cli_setup.py  test_config.py  test_contract_tracker.py  test_coverage_reader.py  test_decisions_template.py  test_dialogue.py  test_duplication_guard.py  test_e2e_semgrep.py  test_gates.py  test_guardian.py  test_hook_generator.py  test_impact_check.py  test_integration_learning.py  test_learn.py  test_learn_command.py  test_llm_review.py  test_mcp_audit.py  test_mcp_server.py  test_opencode_adapter.py  test_openspec_interop.py  test_pattern_detector.py  test_pentest_fixes.py  test_pentest_red_fixes.py  test_pev_tracker.py  test_placement_guard.py  test_preflight.py  test_project_type.py  test_rate_limiting.py  test_reasoning_shield.py  test_scanner.py  test_scanner_core.py  test_scanner_integration.py  test_scanner_utils.py  test_semgrep_integration.py  (+13 more)
tests/test_advisors/: test_upgrade_advisor.py
tests/test_community/: test_pack_manager.py
tests/test_context/: test_adapter.py  test_detector.py  test_mode.py  (+4 more)
tools/: audit_mcp.py  check_config.py  check_drift.py  check_session.py  deep_hallucination.py  deep_hallucination_pedagogy.py  enforce_brief.py  get_learning.py  monitor_entropy.py  scan_bandit.py  scan_code.py  scan_code_pedagogy.py  scan_semgrep.py  scan_senior.py  shield_prompt.py
vibesrails/: __init__.py  __main__.py  ai_guardian.py  assertions.py  autofix.py  cli.py  cli_setup.py  cli_v2.py  config.py  contract_tracker.py  e2e_semgrep.py  gates.py  guardian.py  hook_generator.py  integration_learning.py  learn.py  learn_command.py  learn_runner.py  llm_review.py  mcp_audit.py  metrics.py  opencode_adapter.py  openspec_interop.py  pev_tracker.py  preflight.py  rate_limiting.py  reasoning_shield.py  result_merger.py  scan_runner.py  scanner.py  scanner_cli.py  scanner_git.py  scanner_types.py  scanner_utils.py  semgrep_adapter.py  smart_setup.py  status.py  sync_claude.py  sync_memory.py  watch.py  (+1 more)
(+262 files in other folders)
