[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesrails"
version = "1.1.0"
description = "Scale up your vibe coding - safely. YAML-driven security scanner."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Stan", email = "stan@example.com"}
]
keywords = ["security", "linting", "code-quality", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
watch = ["watchdog>=3.0"]
claude = ["anthropic>=0.18"]
all = ["watchdog>=3.0", "anthropic>=0.18"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
vibesrails = "vibesrails.cli:main"

[project.urls]
Homepage = "https://github.com/VictoHughes/VIBESRAILS"
Documentation = "https://github.com/VictoHughes/VIBESRAILS#readme"
Repository = "https://github.com/VictoHughes/VIBESRAILS"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibesrails*"]

[tool.setuptools.package-data]
vibesrails = ["config/*.yaml"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]
