[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesrails"
version = "2.0.0"
description = "Security guardrails for AI-assisted development"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "SM"}]
maintainers = [{name = "SM"}]
keywords = [
    "security", "ai", "code-review", "mcp", "guardrails",
    "vibe-coding", "claude", "cursor", "copilot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "semgrep>=1.45.0",
]

[project.optional-dependencies]
watch = ["watchdog>=3.0"]
claude = ["anthropic>=0.18"]
audit = ["pip-audit>=2.6"]
typing = ["mypy>=1.0"]
deadcode = ["vulture>=2.7"]
all = ["watchdog>=3.0", "anthropic>=0.18", "pip-audit>=2.6", "mypy>=1.0", "vulture>=2.7"]
mcp = ["mcp[cli]>=1.0.0"]
semgrep = ["semgrep>=1.0.0"]
dev = ["pytest>=7.0", "pytest-timeout>=2.0", "pytest-cov>=4.0", "ruff>=0.1", "import-linter>=2.0"]

[project.scripts]
vibesrails = "vibesrails.cli:main"
vibesrails-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/kionos/vibesrails"
Repository = "https://github.com/kionos/vibesrails"
"Bug Tracker" = "https://github.com/kionos/vibesrails/issues"
"Buy Me a Coffee" = "https://buymeacoffee.com/vibesrails"

[tool.setuptools]
py-modules = ["mcp_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vibesrails*", "tools*", "core*", "adapters*", "storage*"]

[tool.setuptools.package-data]
vibesrails = [
    "config/*.yaml",
    "packs/*.yaml",
    "claude_integration/*.json",
    "claude_integration/*.md",
    "claude_integration/*.template",
    "claude_integration/skills/*.md",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
# Protection anti-surchauffe
timeout = 30
timeout_method = "thread"
addopts = "-q --tb=short"

[tool.importlinter]
root_package = "vibesrails"

[[tool.importlinter.contracts]]
name = "scanner has no internal deps"
type = "forbidden"
source_modules = ["vibesrails.scanner"]
forbidden_modules = ["vibesrails.cli", "vibesrails.smart_setup", "vibesrails.guardian"]

[[tool.importlinter.contracts]]
name = "config has no cli deps"
type = "forbidden"
source_modules = ["vibesrails.config"]
forbidden_modules = ["vibesrails.cli"]

[[tool.importlinter.contracts]]
name = "guardian depends only on scanner"
type = "forbidden"
source_modules = ["vibesrails.guardian"]
forbidden_modules = ["vibesrails.cli", "vibesrails.smart_setup", "vibesrails.learner", "vibesrails.ai_guardian"]

[tool.coverage.run]
# Optimisations coverage (quand utilisé)
branch = false
source = ["vibesrails"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = false
skip_covered = true
